# Agent-Trace

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json
.github/workflows/: ci.yml  desktop-release-validation.yml  performance.yml
apps/desktop/: main.cjs  package.json
apps/desktop-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/scripts/: check-ui.mjs
apps/desktop-tauri/src/: main.tsx  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/ui/: app.js  core.js  index.html  styles.css  views-admin.js  views-runs.js
apps/desktop/scripts/: check.mjs  generate-icon.mjs  installer-upgrade.e2e.ps1  lifecycle.e2e.mjs  package-win.mjs  prepare-dist.mjs
apps/server/: package.json
apps/server/src/: agent-hook-normalizer.ts  agent-hooks.ts  analytics-budget.smoke.ts  app.ts  capacity.benchmark.ts  change-feed.smoke.ts  change-feed.ts  data-governance.smoke.ts  db.ts  evaluations.smoke.ts  index.ts  schema.ts  (+25 more)
apps/web/: next.config.ts  package.json  tsconfig.json
crates/agent-trace-core/: Cargo.toml
crates/agent-trace-core/src/: api.rs  database.rs  lib.rs  models.rs  storage.rs  usage_scanner.rs
crates/agent-trace-core/src/migrations/: 001_initial.sql  003_tombstones.sql  004_settings.sql  005_evaluations.sql  006_budgets.sql  007_replays.sql
docs/: README.md  agent-tracing.md  api-reference.md  architecture.md  deployment-operations.md  desktop-tauri.md  development-guide.md  development-history.md  openapi.yaml  privacy-security.md  product-requirements.md  release-policy.md  requirements-specification.md  testing.md  user-guide.md
docs/adr/: 0001-local-first-loopback-collector.md  0002-unified-run-event-model.md  0003-separate-usage-snapshots-from-traces.md  0004-bounded-dashboard-read-model.md  0005-run-tombstones-and-maintenance.md  README.md
docs/en/: README.md  api-reference.md  deployment-operations.md  privacy-security.md  user-guide.md
examples/: agent-hook-smoke.mjs
examples/simple-agent/: package.json
scripts/: docs-check.mjs  workspace-scripts.smoke.mjs  workspace-scripts.test.mjs
(+77 files in other folders)
