[workspace]
members = [
  "crates/agent-trace-core",
  "apps/desktop-tauri/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-build = "2.5"
thiserror = "2.0"
tokio = { version = "1.49", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.20", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
