[package]
name = "agent-trace-desktop"
version = "0.5.0"
description = "Lightweight local-first Agent-Trace desktop application"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "agent_trace_desktop"
crate-type = ["lib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
agent-trace-core = { path = "../../../crates/agent-trace-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "agent-trace-desktop"
path = "src/main.rs"
